# Eightmory

./: CMakeLists.txt  README.md
.github/workflows/: Linux.yml  Windows.yml  macOS.yml
include/Eightmory/: Core.hpp
include/MemoryManager/: Core.hpp
src/: MemoryManager.cpp
src/Eightmory/: Core.cpp
test/: CMakeLists.txt  EightmoryTestingBase.hpp  TestLibrary.cpp  main.cpp
